--- a/src/homepage/styles.css
+++ b/src/homepage/styles.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #7FD1AE;
+  background-color: #7ae498;
   margin: 20px;
 }
 .company_name {
