--- a/src/finddevs/css/form-div.css
+++ b/src/finddevs/css/form-div.css
@@ -11,14 +11,25 @@
   width: auto;
   float: left;
   color: #333;
-  border-color: #7fd1ae;
+  border-color: #7ae498;
 }
 .uploadButton:hover{
-  background-color: #7fd1ae;
-  border-color: #7fd1ae;
+  background-color: #7ae498;
+  border-color: #7ae498;
 }
 .progress{
   margin-left: 20%;
 }
+.modal {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* 半透明背景 */
+  z-index: 999; /* 确保模态框位于最前面 */
+}
+
 
 
