--- a/src/login/login.css
+++ b/src/login/login.css
@@ -6,7 +6,7 @@
 
   }
   .form-border{
-    border: 2px solid #18BFB1;
+    border: 2px solid #7ae498;
     border-radius: 10px;
     padding: 40px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
@@ -16,17 +16,17 @@
   }
   .center-button{
     margin-bottom: 10%;
-    background-color: #18BFB1;
-    border-color: #18BFB1;
+    background-color: #7ae498;
+    border-color: #7ae498;
     width: 100%;
   }
   .center-button:hover{
-    background-color: #15aa9d;
-    border-color: #15aa9d;
+    background-color: #7ae498;
+    border-color: #7ae498;
   }
   .center-button:active{
-    background-color: #15aa9d;
-    border-color: #15aa9d;
+    background-color: #7ae498;
+    border-color: #7ae498;
   }
 
 .link-no-style {
